lightbox new phots and infos

--- a/rek/app/views/home/_gallery.html.erb
+++ b/rek/app/views/home/_gallery.html.erb
@@ -9,50 +9,38 @@
     </div>
     <div class="row">
       <div class="col-sm-4 portfolio-item">
-        <a href="#portfolioModal1" class="portfolio-link foreground">
-          <%= image_tag("Foto1.JPG", :class => 'img-responsive') %>
-        </a>
+        <%=link_to( image_tag('Foto1.JPG', :class => 'img-responsive'), image_path('Foto1.JPG'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
       </div>
       <div class="col-sm-4 portfolio-item">
-        <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-          <%= image_tag("Foto2.JPG", :class => 'img-responsive') %>
-        </a>
+        <%=link_to( image_tag('Foto2.JPG', :class => 'img-responsive'), image_path('Foto2.JPG'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
       </div>
       <div class="col-sm-4 portfolio-item">
-        <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-          <%= image_tag("Foto3.JPG", :class => 'img-responsive') %>
-        </a>
+        <%=link_to( image_tag('Foto3.JPG', :class => 'img-responsive'), image_path('Foto3.JPG'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4 portfolio-item">
+        <%=link_to( image_tag('Foto4.JPG', :class => 'img-responsive'), image_path('Foto4.JPG'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
       </div>
       <div class="col-sm-4 portfolio-item">
-        <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-          <%= image_tag("Foto4.JPG", :class => 'img-responsive') %>
-        </a>
+        <%=link_to( image_tag('Foto5.JPG', :class => 'img-responsive'), image_path('Foto5.JPG'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
+      </div>
+      <div class="col-sm-4 portfolio-item"><br><br>
+        <%=link_to( image_tag('Foto12.jpg', :class => 'img-responsive'), image_path('Foto12.jpg'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4 portfolio-item">
+        <%=link_to( image_tag('Foto7.jpg', :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:left'), image_path('Foto7.jpg'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
+        <%=link_to( image_tag('Foto8.jpg', :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:right'), image_path('Foto8.jpg'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
       </div>
       <div class="col-sm-4 portfolio-item">
-        <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-          <%= image_tag("Foto5.JPG", :class => 'img-responsive') %>
-        </a>
+        <%=link_to( image_tag('Foto9.jpg', :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:left'), image_path('Foto9.jpg'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
+        <%=link_to( image_tag('Foto10.JPG', :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:right'), image_path('Foto10.JPG'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
       </div>
       <div class="col-sm-4 portfolio-item">
-        <%= image_tag("Foto5.JPG", :class => 'img-responsive') %>
-      </div>
-      <div class="col-sm-4 portfolio-item">
-        <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-          <%= image_tag("Foto7.jpg", :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:left') %>
-          <%= image_tag("Foto8.jpg", :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:right') %>
-        </a>
-      </div>
-      <div class="col-sm-4 portfolio-item">
-        <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-          <%= image_tag("Foto9.jpg", :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:left') %>
-          <%= image_tag("Foto9.jpg", :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:right') %>
-        </a>
-      </div>
-      <div class="col-sm-4 portfolio-item">
-        <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-          <%= image_tag("Foto6.jpg", :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:left') %>
-          <%= image_tag("Foto7.jpg", :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:right') %>
-        </a>
+        <%=link_to( image_tag('Foto6.jpg', :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:left'), image_path('Foto6.jpg'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
+        <%=link_to( image_tag('Foto11.jpg', :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:right'), image_path('Foto11.jpg'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
       </div>
     </div>
   </div>
