--- a/rek/app/views/home/_contacts.html.erb
+++ b/rek/app/views/home/_contacts.html.erb
@@ -1,5 +1,7 @@
 <!-- Contact Section -->
 <section id="contact">
+  - Nome do Cerimonialista, Telefone, Email (perguntar ao frederico)
+
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
