--- a/rek/app/views/home/_confirm.html.erb
+++ b/rek/app/views/home/_confirm.html.erb
@@ -8,16 +8,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 col-lg-offset-2">
-        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-      </div>
-      <div class="col-lg-4">
-        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-      </div>
-      <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="#" class="btn btn-lg btn-outline">
-          <i class="fa fa-download"></i> Download Theme
-        </a>
+      <div class="col-lg-12 col-lg-offset-2">
+        <p>Solicitamos que seja feita a confirmação ou ausência até o dia <strong>18 de Junho</strong></p>
+        <p><strong>Telefone:</strong> 21 24010905</p>
+        <p><strong>Email:</strong> camilanunesassessoria@gmail.com</p>
+        <p>Falar com <strong>Frederico</strong> ou <strong>Camila</strong></p>
       </div>
     </div>
   </div>
