--- a/rek/app/views/home/_how_to_get.html.erb
+++ b/rek/app/views/home/_how_to_get.html.erb
@@ -11,13 +11,14 @@
       <div class="col-lg-5">
         <p>Igreja: Paróquia São José</p>
         <p>Endereço: R. Salustiano Silva, 27 - Magalhaes Bastos, Rio de Janeiro - RJ, 21745-590</p>
-        <p>...Ponto de Referência..</p>
+        <p><%=link_to 'Ver no mapa', 'https://www.google.com.br/maps/place/Par%C3%B3quia+S%C3%A3o+Jos%C3%A9/@-22.8705667,-43.4127823,17z/data=!3m1!4b1!4m5!3m4!1s0x9961f1f564374d:0xea14b27e9ea15551!8m2!3d-22.8705717!4d-43.4105936?hl=pt-PT', target: 'blank'%></p>
         <p>Horário: 18h 30min</p>
       </div>
       <div class="col-lg-5">
         <p>Salão: Espaço Maison Supreme Festas & Eventos</p>
         <p>Endereço: R. Carolina Machado, 1488 - Bento Ribeiro, Rio de Janeiro - RJ, 21321-000</p>
-        <p>...Ponto de Referência..</p>
+        <p><%=link_to 'Ver no mapa', 'https://www.google.com.br/maps/place/Espa%C3%A7o+Maison+Supreme+Festas+%26+Eventos/@-22.8641407,-43.3619505,17z/data=!3m1!4b1!4m5!3m4!1s0x99629a747644fb:0x57b7fafb0db5889a!8m2!3d-22.8641457!4d-43.3597618?hl=pt-PT', target: 'blank'%></p>
+        <p></p>
         <p>Horário: 20h 00min</p>
       </div>
     </div>
