update gift list

--- a/rek/app/views/home/_gifts_list.html.erb
+++ b/rek/app/views/home/_gifts_list.html.erb
@@ -9,10 +9,10 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <%=link_to( image_tag('shoptime.png', :class => 'img-responsive'), 'http://shoptime.com.br', target: "_blank") %>
+        <%=link_to( image_tag('shoptime.png', :class => 'img-responsive'), 'https://listadecasamento.shoptime.com.br/pages/GuestGiftListPage/bridalRegistryId/01-01-1849370', target: "_blank") %>
       </div>
       <div class="col-lg-4">
-        <%=link_to( image_tag('icasei.png', :class => 'img-responsive'), 'https://www.icasei.com.br/', target: "_blank") %>
+        <%=link_to( image_tag('icasei.png', :class => 'img-responsive'), 'https://sites.icasei.com.br/richard_ketherin/pt_br/store/9/1', target: "_blank") %>
       </div>
     </div>
   </div>
