--- a/rek/app/views/home/_gallery.html.erb
+++ b/rek/app/views/home/_gallery.html.erb
@@ -36,7 +36,7 @@
       </div>
       <div class="col-sm-4 portfolio-item">
         <%=link_to( image_tag('Foto9.jpg', :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:left'), image_path('Foto9.jpg'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
-        <%=link_to( image_tag('Foto10.JPG', :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:right'), image_path('Foto10.JPG'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
+        <%=link_to( image_tag('Foto10.JPG', :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:right;width: 170px'), image_path('Foto10.JPG'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
       </div>
       <div class="col-sm-4 portfolio-item">
         <%=link_to( image_tag('Foto6.jpg', :class => 'img-responsive img-responsive-height', :style => 'display: inline;float:left'), image_path('Foto6.jpg'), :class => 'portfolio-link foreground', :'data-toggle'=>"lightbox") %>
