--- a/rek/app/views/layouts/application.html.erb
+++ b/rek/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Freelancer - Start Bootstrap Theme</title>
+  <title>Ketherin e Richard - 01/07</title>
 
   <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
   <%= stylesheet_link_tag "bootstrap.min", :media => "all" %>
