:it: footer message

--- a/rek/app/views/layouts/application.html.erb
+++ b/rek/app/views/layouts/application.html.erb
@@ -166,7 +166,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          Alguma coisa bonita
+          Te amarei de Janeiro a Janeiro!
         </div>
       </div>
     </div>
