--- a/rek/app/views/home/_our_history.html.erb
+++ b/rek/app/views/home/_our_history.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
       <div class="col-lg-14">
-        <p>Era uma tarde 27 Dezembro de 2008, quando estava fuxicando o Orkut de um parent da família Brandão, quando me deparei com o nome Richard Brandão. Lembro-me quando se fosse ontem, você parecia um Deus grego com aqueles óculos escuros, sem camisa e cabelo arrepiado. Então decidi tomar uma decisão que jamais poderia imaginar que seria para sempre ... Eu o adicionei. No nosso primeiro bate-papo, resolvi pedir ele em namoro, e não demorou nem 1 segundo e ele aceitou. Eu cheguei na hora certa, pois ele estava disposto a entrar em um relacionamento. E assim a nossa história começou.</p>
+        <p>Era uma tarde 27 Dezembro de 2008, quando estava fuxicando o Orkut de um parente da família Brandão, quando me deparei com o nome Richard Brandão. Lembro-me como se fosse ontem, você parecia um Deus grego com aqueles óculos escuros, sem camisa e cabelo arrepiado. Então decidi tomar uma decisão que jamais poderia imaginar que seria para sempre ... Eu o adicionei. No nosso primeiro bate-papo, resolvi pedir ele em namoro, e não demorou nem 1 segundo e ele aceitou. Eu cheguei na hora certa, pois ele estava disposto a entrar em um relacionamento. E assim a nossa história começou.</p>
       </div>
       <div class="col-lg-14">
         <p>Mas não foi tão simples assim, nosso primeiro encontro foi apenas no dia 28 de Março de 2009 e a partir desse dia começamos a namorar para valer. Aguardei tanto pelo tão esperado primeiro beijo, o que dizer dele?! Mágico, Perfeito, tudo que eu sempre sonhei e imaginei em um homem!</p>
