--- a/rek/app/views/home/_confirm.html.erb
+++ b/rek/app/views/home/_confirm.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
       <div class="col-lg-12 col-lg-offset-2">
-        <p>Solicitamos que seja feita a confirmação ou ausência até o dia <strong>18 de Junho</strong></p>
+        <p>Solicitamos que seja feita a confirmação da presença até o dia <strong>18 de Junho</strong></p>
         <p><strong>Telefone:</strong> 21 24010905</p>
         <p><strong>Email:</strong> camilanunesassessoria@gmail.com</p>
         <p>Falar com <strong>Frederico</strong> ou <strong>Camila</strong></p>
